<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_new"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/carIconImageView"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:fontFamily="@font/abril_fatface_regular"
        android:layout_centerInParent="true"
        android:contentDescription="@null"
        android:src="@drawable/car_png" />

    <TextView
        android:id="@+id/carITextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/carIconImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/abril_fatface_regular"
        android:text="@string/booki"
        android:textColor="@color/colorBackgrounds"
        android:textSize="70sp" />

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-4dp"
        android:foregroundGravity="bottom"
        android:indeterminate="true"
        android:padding="0dp"
        android:theme="@style/ProgressBarStyle" />


    <RelativeLayout
        android:id="@+id/afterAnimationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="250dp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/WelcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:gravity="center"
            android:textColor="@color/colorBackgrounds"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/readItTogetherTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/WelcomeTextView"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/read_it_together"
            android:textColor="@color/colorTextViewReg"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/loginButton"
            android:layout_below="@+id/readItTogetherTextView"
            android:gravity="center"
            android:orientation="vertical">


        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_above="@+id/skipTextView"
            android:layout_marginBottom="5dp"
            style="@style/loginButton"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="16sp" />


        <Button
            android:id="@+id/signupButton"
            style="@style/loginButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_above="@+id/loginButton"
            android:layout_marginBottom="5dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/skipTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:text=""
            android:textColor="@color/colorTextView"
            android:textSize="15sp" />


    </RelativeLayout>

</RelativeLayout>